--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_version}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation("meteordevelopment:meteor-client:${project.meteor_version}-SNAPSHOT")
+	modImplementation("meteordevelopment:meteor-client:${project.meteor_version}")
 }
 
 processResources {
