--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-minecraft_version=1.19.2
-yarn_version=1.19.2+build.1
-loader_version=0.14.9
+minecraft_version=1.19.3
+yarn_version=1.19.3+build.3
+loader_version=0.14.11
 
 # Mod Properties
 mod_version=1.2.1
 maven_group=me.zeroxEnjoy
 archives_base_name=autovclipper
 
-meteor_version=0.5.1
+meteor_version=0.5.2-SNAPSHOT
